
nvidia-graphics-drivers (450.142.00-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 450.142.00 (2021-07-20).
    * Fixed CVE-2021-1093, CVE-2021-1094, CVE-2021-1095.
      https://nvidia.custhelp.com/app/answers/detail/a_id/5211
    - Fixed a bug that could result in blank displays when driving multiple
      displays at the same resolution using active DisplayPort dongles.

 -- Andreas Beckmann <anbe@debian.org>  Fri, 23 Jul 2021 22:22:20 +0200

nvidia-graphics-drivers (450.119.04-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 450.119.04 (2021-05-04).

 -- Andreas Beckmann <anbe@debian.org>  Thu, 20 May 2021 13:53:07 +0200

nvidia-graphics-drivers (450.119.03-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 450.119.03 (2021-04-19).
    * Fixed CVE-2021-1076, CVE-2021-1077.
      https://nvidia.custhelp.com/app/answers/detail/a_id/5172
    - Fixed a driver installation failure on Linux kernel 5.11 release
      candidates, where the NVIDIA kernel module failed to build with error
      "error: implicit declaration of function 'sys_close'".
    - Fixed a bug where calls to vkCreateDevice could fail on Ampere GPUs when
      ray tracing extensions were enabled and the application was running within
      the Steam Linux Runtime.
    - Fixed a regression that could cause display corruption when using
      a scaled resolution after resuming from power management suspend.
    - Fixed a bug that could intermittently cause NvFBC applications to fail
      with the error message "Unable to send exported fds".

 -- Andreas Beckmann <anbe@debian.org>  Thu, 22 Apr 2021 21:13:14 +0200

nvidia-graphics-drivers (450.102.04-1) UNRELEASED; urgency=medium

  * New upstream long lived branch release 450.102.04 (2021-01-07).
    * Fixed CVE-2021-1052, CVE-2021-1053, CVE-2021-1056.
      https://nvidia.custhelp.com/app/answers/detail/a_id/5142
    - Fixed the X driver's composition pipeline (used, e.g., for X desktop