@@ -5,7 +5,7 @@ Description: use KBUILD_CFLAGS and (KBUILD_)LDFLAGS
 
 --- a/Kbuild
 +++ b/Kbuild
-@@ -110,6 +110,7 @@ NV_CONFTEST_CMD := /bin/sh $(NV_CONFTEST
+@@ -107,6 +107,7 @@ NV_CONFTEST_CMD := /bin/sh $(NV_CONFTEST
  NV_CFLAGS_FROM_CONFTEST := $(shell $(NV_CONFTEST_CMD) build_cflags)
  
  NV_CONFTEST_CFLAGS = $(NV_CFLAGS_FROM_CONFTEST) $(EXTRA_CFLAGS) -fno-pie
@@ -15,8 +15,8 @@ Description: use KBUILD_CFLAGS and (KBUILD_)LDFLAGS
  NV_CONFTEST_COMPILE_TEST_HEADERS += $(obj)/conftest/functions.h
 --- a/nvidia/nvidia.Kbuild
 +++ b/nvidia/nvidia.Kbuild
-@@ -87,7 +87,7 @@ NVIDIA_INTERFACE := nvidia/nv-interface.
- always += $(NVIDIA_INTERFACE)
+@@ -92,7 +92,7 @@ always += $(NVIDIA_INTERFACE)
+ always-y += $(NVIDIA_INTERFACE)
  
  $(obj)/$(NVIDIA_INTERFACE): $(addprefix $(obj)/,$(NVIDIA_OBJECTS))
 -	$(LD) -r -o $@ $^
@@ -37,8 +37,8 @@ Description: use KBUILD_CFLAGS and (KBUILD_)LDFLAGS
    # Kbuild's "clean" rule won't clean up the conftest headers on its own, and
 --- a/nvidia-modeset/nvidia-modeset.Kbuild
 +++ b/nvidia-modeset/nvidia-modeset.Kbuild
-@@ -72,7 +72,7 @@ NVIDIA_MODESET_INTERFACE := nvidia-modes
- always += $(NVIDIA_MODESET_INTERFACE)
+@@ -77,7 +77,7 @@ always += $(NVIDIA_MODESET_INTERFACE)
+ always-y += $(NVIDIA_MODESET_INTERFACE)
  
  $(obj)/$(NVIDIA_MODESET_INTERFACE): $(addprefix $(obj)/,$(NVIDIA_MODESET_OBJECTS))
 -	$(LD) -r -o $@ $^
